--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,6 @@ body::after {
 .table-head {
     font-size: 1.5em;
     font-weight: bold;
-    width: 30%;
 }
 
 .table-skill {
@@ -368,6 +367,10 @@ body::after {
 .interest>p {
     font-size: 1.5em;
     text-align: justify;
+}
+
+.interest > .interest-desc{
+    align-self: self-start;
 }
 
 .images {
